refactor(io_uring): move io_uring to common rpc_client crate
So that we can disable io_uring feature for api_server temporarily.
The io_uring based api_server still needs some performance tunning.

--- a/crates/common/rpc_clients/client_common/Cargo.toml
+++ b/crates/common/rpc_clients/client_common/Cargo.toml
@@ -4,7 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [features]
-io_uring = []
+io_uring = [
+    "dep:io-uring",
+    "dep:core_affinity",
+    "dep:crossbeam-channel",
+    "dep:libc",
+]
 
 [dependencies]
 bytes.workspace = true
@@ -22,3 +27,7 @@ socket2.workspace = true
 rpc_codec_common.workspace = true
 futures.workspace = true
 async-trait.workspace = true
+io-uring = { workspace = true, optional = true }
+core_affinity = { workspace = true, optional = true }
+crossbeam-channel = { workspace = true, optional = true }
+libc = { workspace = true, optional = true }
