perf(api_server): enable uuid fast-rng feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,7 +73,7 @@ tower = "0.5.1"
 strum = { version = "0.26.3", features = ["derive"] }
 quick-xml = { version = "0.36.2", features = ["serialize"] }
 http-body-util = "0.1.2"
-uuid = { version = "1.11.0", features = ["v4", "v7"] }
+uuid = { version = "1.11.0", features = ["v4", "v7", "fast-rng"] }
 rkyv = { version = "0.8.8", features = ["uuid-1", "unaligned"] }
 rand = "0.8.5"
 hex = "0.4.3"
