--- a/crates/common/rpc_clients/client_common/Cargo.toml
+++ b/crates/common/rpc_clients/client_common/Cargo.toml
@@ -21,7 +21,7 @@ tokio-util.workspace = true
 tokio-stream.workspace = true
 metrics.workspace = true
 tokio-retry.workspace = true
-slotmap_conn_pool.workspace = true
+single_conn.workspace = true
 parking_lot.workspace = true
 strum.workspace = true
 socket2.workspace = true
