--- a/crates/common/data_blob_tracking/Cargo.toml
+++ b/crates/common/data_blob_tracking/Cargo.toml
@@ -15,7 +15,7 @@ serde_json = { workspace = true }
 rpc_client_nss = { workspace = true }
 rpc_client_rss = { workspace = true }
 rpc_client_common = { workspace = true }
-slotmap_conn_pool = { workspace = true }
+single_conn = { workspace = true }
 
 # Codecs (needed for response types)
 rss_codec = { workspace = true }
