--- a/crates/common/rpc_clients/nss/Cargo.toml
+++ b/crates/common/rpc_clients/nss/Cargo.toml
@@ -15,7 +15,7 @@ tokio-stream.workspace = true
 metrics.workspace = true
 metrics-exporter-statsd.workspace = true
 tokio-retry.workspace = true
-slotmap_conn_pool.workspace = true
+single_conn.workspace = true
 parking_lot.workspace = true
 strum.workspace = true
 rpc_client_common.workspace = true
