perf(rpc): eliminate copy in BumpBuf encoding and refactor EncodeBuffer
Optimize RPC encoding by implementing zero-copy freeze() in BumpBuf and
consolidating duplicate EncodeBuffer code from nss/rss clients into
rpc_client_common.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -118,7 +118,7 @@ metrics-exporter-prometheus = "0.17.2"
 tokio-retry = "0.3"
 moka = { version = "0.12", features = ["future"] }
 tikv-jemallocator = "0.6"
-bumpalo = "3.16"
+bumpalo = { version = "3.19", features = ["collections"] }
 parking_lot = "0.12"
 arrayvec = "0.7"
 governor = "0.6"
