--- a/crates/common/rpc_clients/client_common/Cargo.toml
+++ b/crates/common/rpc_clients/client_common/Cargo.toml
@@ -15,6 +15,7 @@ metrics = []
 [dependencies]
 bytes.workspace = true
 bumpalo.workspace = true
+prost.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
 tokio.workspace = true
