--- a/crates/common/rpc_codecs/codec_common/Cargo.toml
+++ b/crates/common/rpc_codecs/codec_common/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2024"
 
 [dependencies]
 bytes.workspace = true
-bumpalo = { workspace = true, features = ["collections"] }
+bumpalo.workspace = true
 tokio-util.workspace = true
