feat(rpc): add header checksum verification and optimize retry counter
Add xxhash64-based checksum verification to RPC message headers for
improved message integrity detection. The checksum covers all header
fields after the checksum field itself.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,7 +86,7 @@ clap = { version = "4.5.27", features = ["derive"] }
 hmac = "0.12"
 itertools = "0.13"
 crc32fast = "1.4.2"
-xxhash-rust = {version = "0.8.15", features = ["xxh3"] }
+xxhash-rust = {version = "0.8.15", features = ["xxh3", "xxh64"] }
 blake2 = "0.10.6"
 nom = "7.1"
 base64 = "0.22.1"
