--- a/crates/common/rpc_codecs/rss_codec/Cargo.toml
+++ b/crates/common/rpc_codecs/rss_codec/Cargo.toml
@@ -9,6 +9,7 @@ rpc_client_common.workspace = true
 bytes.workspace = true
 bytemuck.workspace = true
 prost.workspace = true
+xxhash-rust.workspace = true
 
 [build-dependencies]
 prost-build.workspace = true
