feat(api_server): migrate trace_id from u64 to u128 and propagate through all layers
Migrate TraceId type from u64 to u128 to support UUID v7 format and
ensure trace_id propagates through the entire request lifecycle for
better logging and future distributed tracing.

--- a/crates/common/rpc_clients/client_common/Cargo.toml
+++ b/crates/common/rpc_clients/client_common/Cargo.toml
@@ -8,6 +8,7 @@ metrics = []
 
 [dependencies]
 bytes.workspace = true
+data_types.workspace = true
 prost.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
