--- a/crates/common/rpc_clients/nss/Cargo.toml
+++ b/crates/common/rpc_clients/nss/Cargo.toml
@@ -8,6 +8,7 @@ serde.workspace = true
 tokio.workspace = true
 prost.workspace = true
 bytes.workspace = true
+data_types.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
 tokio-stream.workspace = true
