--- a/crates/common/rpc_codecs/codec_common/Cargo.toml
+++ b/crates/common/rpc_codecs/codec_common/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2024"
 [dependencies]
 bytes.workspace = true
 bytemuck.workspace = true
+data_types.workspace = true
 xxhash-rust.workspace = true
