--- a/crates/common/rpc_codecs/bss_codec/Cargo.toml
+++ b/crates/common/rpc_codecs/bss_codec/Cargo.toml
@@ -8,4 +8,5 @@ rpc_codec_common.workspace = true
 rpc_client_common.workspace = true
 bytes.workspace = true
 bytemuck.workspace = true
+data_types.workspace = true
 xxhash-rust.workspace = true
