--- a/crates/common/rpc_codecs/nss_codec/Cargo.toml
+++ b/crates/common/rpc_codecs/nss_codec/Cargo.toml
@@ -8,6 +8,7 @@ rpc_codec_common.workspace = true
 rpc_client_common.workspace = true
 bytes.workspace = true
 bytemuck.workspace = true
+data_types.workspace = true
 prost.workspace = true
 xxhash-rust.workspace = true
 
