--- a/crates/api_server/Cargo.toml
+++ b/crates/api_server/Cargo.toml
@@ -14,6 +14,7 @@ aws_signature.workspace = true
 data_types.workspace = true
 data_blob_tracking.workspace = true
 volume_group_proxy.workspace = true
+metrics_wrapper.workspace = true
 
 serde.workspace = true
 config.workspace = true
@@ -90,5 +91,5 @@ reqwest.workspace = true
 
 [features]
 default = []
-metrics_statsd = ["dep:metrics-exporter-statsd", "rpc_client_common/metrics"]
-metrics_prometheus = ["dep:metrics-exporter-prometheus", "rpc_client_common/metrics"]
+metrics_statsd = ["dep:metrics-exporter-statsd", "metrics_wrapper/metrics", "rpc_client_common/metrics"]
+metrics_prometheus = ["dep:metrics-exporter-prometheus", "metrics_wrapper/metrics", "rpc_client_common/metrics"]
