--- a/crates/common/rpc_codecs/rss_codec/Cargo.toml
+++ b/crates/common/rpc_codecs/rss_codec/Cargo.toml
@@ -13,4 +13,6 @@ prost.workspace = true
 xxhash-rust.workspace = true
 
 [build-dependencies]
+cmd_lib.workspace = true
 prost-build.workspace = true
+
