refactor(xtask): rename "git" commands to "repo" commands
To make it consistent with other commands in justfile

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,8 @@ jobs:
     - name: Load Rust cache
       uses: Swatinem/rust-cache@v2
 
-    - name: Run git init
-      run: cargo xtask git init
+    - name: Run repo init
+      run: cargo xtask repo init
 
     - name: Run precheckin
       run: cargo xtask precheckin
