chore(docker): rename docker-all-in-one to container-all-in-one
To make it more generic since it has no docker specific stuff

--- a/crates/container-all-in-one/Cargo.toml
+++ b/crates/container-all-in-one/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "docker-all-in-one"
+name = "container-all-in-one"
 version = "0.1.0"
 edition = "2024"
 
 [[bin]]
-name = "docker-all-in-one"
+name = "container-all-in-one"
 path = "src/main.rs"
 
 [dependencies]
