refactor(ci): merge docker-build and docker-publish into single job
- Combine docker-build and docker-publish jobs to avoid building the
  Docker image twice
- Run all api_server tests instead of only the basic test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,9 +44,12 @@ jobs:
     - name: Run precheckin
       run: cargo xtask precheckin
 
-  docker-build:
+  docker:
     runs-on: ubuntu-latest
     needs: build
+    permissions:
+      contents: read
+      packages: write
 
     steps:
     - name: Checkout code
@@ -80,61 +83,19 @@ jobs:
         cargo xtask docker run --detach
         sleep 60
         curl -sf http://localhost:18080/mgmt/health || (docker logs fractalbits-dev && exit 1)
-        cargo test -p api_server --test basic || (docker logs fractalbits-dev && exit 1)
+        cargo test -p api_server || (docker logs fractalbits-dev && exit 1)
         cargo xtask docker stop
 
-  docker-publish:
-    runs-on: ubuntu-latest
-    needs: docker-build
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Install system dependencies
-      run: sudo apt-get update && sudo apt-get install -y moreutils protobuf-compiler
-
-    - name: Install Rust toolchain
-      uses: dtolnay/rust-toolchain@stable
-
-    - name: Free disk space
-      run: |
-        sudo rm -rf /usr/share/dotnet
-        sudo rm -rf /opt/ghc
-        sudo rm -rf /usr/local/share/boost
-
-    - name: Load Rust cache
-      uses: Swatinem/rust-cache@v2
-      with:
-        cache-on-failure: false
-
-    - name: Run repo init
-      run: cargo xtask repo init
-
-    - name: Build Docker image
-      run: cargo xtask docker build --release
-
     - name: Log in to Container Registry
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Extract metadata for Docker
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        tags: |
-          type=sha,prefix=
-          type=raw,value=latest
-
     - name: Tag and push Docker image
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
       run: |
         docker tag fractalbits:latest ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
         docker tag fractalbits:latest ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
