--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,8 +81,18 @@ jobs:
     - name: Test Docker container
       run: |
         cargo xtask docker run --detach
-        sleep 60
-        curl -sf http://localhost:18080/mgmt/health || (docker logs fractalbits-dev && exit 1)
+        for i in {1..60}; do
+          if curl -sf http://localhost:18080/mgmt/health > /dev/null 2>&1; then
+            echo "Container ready after ${i}s"
+            break
+          fi
+          if [ $i -eq 60 ]; then
+            echo "Container failed to start"
+            docker logs fractalbits-dev
+            exit 1
+          fi
+          sleep 1
+        done
         cargo test -p api_server || (docker logs fractalbits-dev && exit 1)
         cargo xtask docker stop
 
