refactor: misc cleanups
- Remove unused score field from BssNodeInfo and score-based sorting
- Rename quorum_size to cluster_size for clarity (wait for exact count)
- Disable ansi color for service logs
- Make bucket optional in CDK config builder
- Make aws config section optional to support allInBss blob storage mode
  where no S3 bucket is required, rename value to make it consistent

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,7 @@ jobs:
       run: cargo xtask repo init
 
     - name: Build Docker image
-      run: cargo xtask docker build --release
+      run: cargo xtask prebuilt update && cargo xtask docker build --release
 
     - name: Test Docker container
       run: |
