--- a/vpc/fractalbits-bootstrap/Cargo.toml
+++ b/vpc/fractalbits-bootstrap/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 log.workspace = true
 env_logger.workspace = true
 cmd_lib.workspace = true
-xtask_tools.workspace = true
+xtask_common.workspace = true
 chrono.workspace = true
 serde_json.workspace = true
 serde.workspace = true
