--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -9,7 +9,7 @@ env_logger.workspace = true
 rlimit.workspace = true
 clap.workspace = true
 strum.workspace = true
-xtask_tools.workspace = true
+xtask_common.workspace = true
 colored.workspace = true
 test_common.workspace = true
 aws-sdk-s3.workspace = true
