feat(bootstrap): add progress display command and improve bucket config
- Add bootstrap-progress command to xtask for monitoring VPC deployment
- Improve bootstrap bucket configuration

--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -21,4 +21,6 @@ uuid.workspace = true
 comfy-table.workspace = true
 glob.workspace = true
 dialoguer.workspace = true
+indicatif.workspace = true
 zip.workspace = true
+toml.workspace = true
