feat(deploy): add SSM bootstrap and on-prem cluster creation
Add two new deployment capabilities:

1. SSM-based Bootstrap (--ssm-bootstrap flag for create-vpc):
   - Deploy VPC without userData, then bootstrap via AWS SSM
   - Parse CDK outputs to get instance IDs (static + ASG instances)
   - Batch SSM commands (max 50 instances per batch) for large clusters
   - Wait for SSM agent to be ready before sending commands
   - Poll for completion and logs to /var/log/cloud-init-output.log

2. On-prem Cluster Creation (create-cluster command):
   - New command to deploy fractalbits on bare-metal/on-prem servers
   - Reads cluster config from TOML file with node IPs and roles
   - Generates bootstrap_cluster.toml and uploads to S3
   - Bootstraps each node via SSH

--- a/xtask/common/Cargo.toml
+++ b/xtask/common/Cargo.toml
@@ -9,5 +9,7 @@ clap.workspace = true
 num_cpus.workspace = true
 rayon.workspace = true
 uuid.workspace = true
+serde.workspace = true
 serde_json.workspace = true
+toml.workspace = true
 tracing.workspace = true
