--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,7 +85,7 @@ futures = "0.3.31"
 pin-project-lite = "0.2.15"
 async-trait = "0.1.81"
 serde_json = "1.0.138"
-toml = { version = "0.8", default-features = false, features = ["parse"] }
+toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
 clap = { version = "4.5.27", features = ["derive"] }
 hmac = "0.12"
 itertools = "0.13"
